profile till selenium