@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project>
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>se.david.maven</groupId>
         <artifactId>test</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-	
-	<name>selenium test</name>
+
+    <name>selenium test</name>
     <artifactId>selenium</artifactId>
     <packaging>jar</packaging>
 
@@ -34,172 +34,20 @@
             <version>4.8.1</version>
         </dependency>
     </dependencies>
+
     <build>
-    <plugins>
-        <plugin>
-            <groupId>org.codehaus.cargo</groupId>
-            <artifactId>cargo-maven2-plugin</artifactId>
-            <version>1.3.3</version>
-            <configuration>
-                <!-- Container configuration -->
-                <container>
-                    <containerId>jetty6x</containerId>
-                    <type>embedded</type>
-                </container>
-                <!-- Configuration to use with the container or the deployer -->
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.14.1</version>
                 <configuration>
-                    <properties>
-                        <cargo.servlet.port>4444</cargo.servlet.port>
-                    </properties>
+                    <skip>true</skip>
                 </configuration>
-                <deployables>
-                    <deployable>
-                        <groupId>se.david.maven</groupId>
-                        <artifactId>web</artifactId>
-                        <type>war</type>
-                        <properties>
-                            <context>/</context>
-                        </properties>
-                    </deployable>
-                </deployables>
-                <!-- Don't wait, execute the tests after the container is started -->
-                <wait>false</wait>
-            </configuration>
-            <executions>
-                <execution>
-                    <id>start-container</id>
-                    <phase>pre-integration-test</phase>
-                    <goals>
-                        <goal>start</goal>
-                    </goals>
-                </execution>
-                <execution>
-                    <id>stop-container</id>
-                    <phase>post-integration-test</phase>
-                    <goals>
-                        <goal>stop</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-failsafe-plugin</artifactId>
-            <version>2.14</version>
-            <executions>
-                <execution>
-                    <id>integration-tests</id>
-                    <phase>integration-test</phase>
-                    <goals>
-                        <goal>integration-test</goal>
-                    </goals>
-                    <configuration>
-                        <includes>
-                            <include>**/*</include>
-                        </includes>
-                    </configuration>
-                </execution>
-            </executions>
-            <dependencies>
-                <dependency>
-                    <groupId>se.david.maven</groupId>
-                    <artifactId>web</artifactId>
-                    <version>1.0-SNAPSHOT</version>
-                </dependency>
-            </dependencies>
-        </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.14.1</version>
-            <configuration>
-                <excludes>
-                    <exclude>**/*</exclude>
-                </excludes>
-            </configuration>
-        </plugin>
-    </plugins>
+            </plugin>
+        </plugins>
     </build>
-<!--      <plugins>
-         <plugin>
-            <groupId>org.mortbay.jetty</groupId>
-            <artifactId>maven-jetty-plugin</artifactId>
-            <configuration>
-               <stopPort>9966</stopPort>
-               <stopKey>foo</stopKey>
-               <connectors>
-                  <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-                     <port>4444</port>
-                     <maxIdleTime>60000</maxIdleTime>
-                  </connector>
-               </connectors>
-            </configuration>
-            <executions>
-               <execution>
-                  <id>start-jetty</id>
-                  <phase>pre-integration-test</phase>
-                  <goals>
-                     <goal>run</goal>
-                  </goals>
-                  <configuration>
-                     <daemon>true</daemon>
-                  </configuration>
-               </execution>
-               <execution>
-                  <id>stop-jetty</id>
-                  <phase>post-integration-test</phase>
-                  <goals>
-                     <goal>stop</goal>
-                  </goals>
-               </execution>
-            </executions>
-         </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-         </plugin>
-         <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>selenium-maven-plugin</artifactId>
-            <version>1.0-beta-3</version>
-            <executions>
-               <execution>
-                  <id>start</id>
-                  <phase>pre-integration-test</phase>
-                  <goals>
-                     <goal>start-server</goal>
-                  </goals>
-               </execution>
-               <execution>
-                  <id>stop</id>
-                  <phase>post-integration-test</phase>
-                  <goals>
-                     <goal>stop-server</goal>
-                  </goals>
-               </execution>
-            </executions>
-         </plugin>
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-surefire-plugin</artifactId>
-              <executions>
-                  <execution>
-                      <id>integration-tests</id>
-                      <phase>integration-test</phase>
-                      <goals>
-                          <goal>test</goal>
-                      </goals>
-                      <configuration>
-                          <skip>false</skip>
-                      </configuration>
-                  </execution>
-              </executions>
-          </plugin>
-      </plugins>
-   </build>-->
-   
-   
-   
+
     <profiles>
         <profile>
             <id>runSelenium</id>
@@ -217,53 +65,27 @@
                         <artifactId>cargo-maven2-plugin</artifactId>
                         <version>1.3.3</version>
                         <configuration>
-                            <wait>false</wait>
                             <container>
-                                <containerId>jboss7x</containerId>
-                                <type>installed</type>
-                                <home>${env.JBOSS_HOME}</home>
+                                <containerId>jetty6x</containerId>
+                                <type>embedded</type>
                             </container>
                             <configuration>
-                                <type>existing</type>
-                                <home>${stpapp_home}</home>
                                 <properties>
-                                    <cargo.jvmargs>
-                                        -Xms1024m -Xmx1024m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true
-                                        -Dorg.jboss.resolver.warning=true -Dsun.rmi.dgc.client.gcInterval=3600000
-                                        -Dsun.rmi.dgc.server.gcInterval=3600000 -Djboss.modules.system.pkgs=org.jboss.byteman
-                                        -Djava.awt.headless=true -Djboss.server.default.config=standalone.xml
-                                        -Djboss.socket.binding.port-offset=20000 -Djboss.bind.address=0.0.0.0
-                                        -Djboss.bind.address.management=0.0.0.0 -Djboss.server.base.dir=${stpapp_home}
-                                        -Dstp.version=12.1.0-360  -server -Xloggc:${stpapp_home}/log/gc.log -XX:+PrintGCDateStamps
-                                        -Dsbtp.properties=file://${stpapp_home}/stpconfig/sbtp.properties
-                                        -Dsbtp.cf.routing=file://${stpapp_home}/stpconfig/sbtp.cf.routing
-                                    </cargo.jvmargs>
-                                    <cargo.jboss.management.port>20099</cargo.jboss.management.port>
-                                    <cargo.servlet.port>20080</cargo.servlet.port>
-                                    <cargo.logging>high</cargo.logging>
+                                    <cargo.servlet.port>4444</cargo.servlet.port>
                                 </properties>
                             </configuration>
-
-                            <deployer>
-                                <type>installed</type>
-                            </deployer>
-
                             <deployables>
                                 <deployable>
                                     <groupId>se.david.maven</groupId>
                                     <artifactId>web</artifactId>
-                                    <type>jar</type>
-                                    <pingURL>http://localhost:20080/varamgr/VaramgrWS/Varamgr?wsdl</pingURL>
-                                </deployable>
-                                <deployable>
-                                    <groupId>se.david.maven</groupId>
-                                    <artifactId>datalayer</artifactId>
-                                    <type>jar</type>
-                                    <pingURL>http://localhost:20080/vara-admin/login</pingURL>
+                                    <type>war</type>
+                                    <properties>
+                                        <context>/</context>
+                                    </properties>
                                 </deployable>
                             </deployables>
+                            <wait>false</wait>
                         </configuration>
-
                         <executions>
                             <execution>
                                 <id>start-container</id>
@@ -272,45 +94,40 @@
                                     <goal>start</goal>
                                 </goals>
                             </execution>
-
                             <execution>
                                 <id>stop-container</id>
                                 <phase>post-integration-test</phase>
                                 <goals>
-                                    <goal>undeploy</goal>
                                     <goal>stop</goal>
                                 </goals>
                             </execution>
                         </executions>
                     </plugin>
 
+
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
                         <version>2.14</version>
-                        <configuration>
-                            <includes>
-                                <include>**/*Test.java</include>
-                            </includes>
-                        </configuration>
                         <executions>
                             <execution>
                                 <id>integration-tests</id>
                                 <phase>integration-test</phase>
                                 <goals>
                                     <goal>integration-test</goal>
-                                    <goal>verify</goal>
                                 </goals>
                                 <configuration>
-                                    <skip>false</skip>
+                                    <includes>
+                                        <include>**/*</include>
+                                    </includes>
                                 </configuration>
                             </execution>
                         </executions>
                     </plugin>
 
+
                 </plugins>
             </build>
         </profile>
     </profiles>
-
 </project>
